--- a/arch/powerpc/Makefile
+++ b/arch/powerpc/Makefile
@@ -398,6 +398,9 @@ endif
 arch/powerpc/lib/crtsavres.o: arch/powerpc/lib/crtsavres.S
 	$(Q)$(MAKE) $(build)=arch/powerpc/lib arch/powerpc/lib/crtsavres.o
 
+arch/powerpc/lib/crtsavres.o: arch/powerpc/lib/crtsavres.S
+	$(Q)$(MAKE) $(build)=arch/powerpc/lib arch/powerpc/lib/crtsavres.o
+
 archprepare: checkbin arch/powerpc/lib/crtsavres.o
 
 archheaders:
